--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
   <body>
     <header></header>
     <main>
-      <section class="container text-center">
+      <section class="container gradient-border text-center" id="box">
         <div id="cronometro">
           <h1 id="tiempo">00:00:00</h1>
-          <button type="button" class="btn btn-outline-info" id="iniciar" onclick="play()">Iniciar</button>
-          <button type="button" class="btn btn-outline-success"
-          id="pausar" onclick="pausar()">Pausar</button>
+          <button type="button" class="btn btn-outline-info" id="iniciar" onclick="play()">INICIAR</button>
           <button type="button" class="btn btn-outline-warning"
-          id="reset" onclick="reset()">Reset</button>
+          id="pausar" onclick="pausar()">PAUSAR</button>
+          <button type="button" class="btn btn-outline-danger"
+          id="reset" onclick="reset()">RESET</button>
         </div>
       </section>
     </main>
